# 4co4co-backend

./: .gitignore
ai-server/: .dockerignore  Dockerfile  docker-compose.yml  main.py  requirements-cpu.txt  requirements.txt  (+1 more)
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: lantern_api.py  music_api.py  routers.py  user_api.py  websocket.py
backend/app/core/: celery_app.py  config.py  database.py  exception_handlers.py  exceptions.py  factory.py  logger.py  middleware.py  response.py  s3.py  settings.py
backend/app/core/config/: cors.py  openapi.py  s3.py  settings.py
backend/app/core/db/: database.py  dependencies.py
backend/app/core/exceptions/: handlers.py  types.py
backend/app/core/logging/: logger.py
backend/app/core/response/: response.py
backend/app/core/tasks/: celery_app.py  music_tasks.py  panorama_tasks.py
backend/app/core/utils/: validators.py
backend/app/core/validation/: lantern_validation.py
backend/app/repositories/: lantern_repository.py  music_repository.py  panorama_repository.py  user_repository.py
backend/app/schemas/: lantern_list_response.py  lantern_response.py  music.py  panorama.py  schemas.py  swagger.py  user.py
backend/app/schemas/db/: lantern.py  lanterns.py  music.py  panorama.py
backend/app/schemas/response/: lantern_detail_response.py  lantern_list_response.py  lantern_response.py  schemas.py
backend/app/services/: lantern_service.py  music_service.py  user_service.py
backend/app/worker/: tasks.py
(+62 files in other folders)
