[tool.poetry]
name = "4co4co-backend"
version = "0.1.0"
description = "Backend API service for 4co4co project"
authors = ["pyounani <yndbsk9372@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"

fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pydantic = "^2.11.0"
pydantic-settings = "^2.9.0"
motor = "^3.7.0"
pymongo = "^4.12.0"
celery = "^5.5.0"
redis = "^5.3.0"
sse-starlette = "^2.3.0"
httpx = "^0.28.0"
boto3 = "^1.39.0"
aioboto3 = "^15.1.0"
hvac = "^2.3.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.20"
pyjwt = "^2.9.0"
sqlalchemy = "^2.0.0"
alembic = "^1.13.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
black = "^24.4.0"
isort = "^5.13.0"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
